feat: add pixel art models and update css

--- a/index.html
+++ b/index.html
@@ -2,32 +2,42 @@
 <html>
   <head>
     <meta charset="utf‐8" />
-    <title>Web audio</title>
+    <title>PIXTONE</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <div id="app">
       <h1 id="title">PIXTONE</h1>
 
-      <div class="canvasContainer">
-        <canvas id="canvas"></canvas>
-      </div>
-
-      <div id="controller">
-        <div id="buttonContainer">
-          <button id="playButton" class="button"></button>
-          <button id="clearButton" class="button"></button>
+      <div id="container">
+        <div class="canvasContainer">
+          <canvas id="canvas"></canvas>
         </div>
 
-        <select id="selectSound">
-          <option value="">--Sound type--</option>
-          <option value="sine">Sine</option>
-          <option value="square">Square</option>
-          <option value="sawtooth">Sawtooth</option>
-          <option value="triangle">Triangle</option>
-        </select>
+        <div id="controller">
+          <div id="buttonContainer">
+            <button id="playButton" class="button"></button>
+            <button id="clearButton" class="button"></button>
+          </div>
+
+          <div>
+            <select id="selectSound">
+              <option value="">--Sound type--</option>
+              <option value="sine">Sine</option>
+              <option value="square">Square</option>
+              <option value="sawtooth">Sawtooth</option>
+              <option value="triangle">Triangle</option>
+            </select>
+
+            <select id="selectPixelModel">
+              <option value="">--Pixel model--</option>
+              <option value="heart">Heart</option>
+              <option value="note">Note</option>
+            </select>
+          </div>
+        </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
